# learningnotes

./: README.md
c/: .gitignore  CMakeLists.txt  main.c
c/arraytest/: arraytest.c  arraytest.h
c/asserttest/: main.c
c/datatest/: datatest.c  datatest.h
c/explaintest/: a.c  a.h  explain.c  explain.h
c/functest/: functest.c  functest.h
c/iotest/: iotest.c  iotest.h
c/memtest/: memtest.c  memtest.h
c/pretest/: pretest.c  pretest.h
c/ptrtest/: ptrtest.c  ptrtest.h
c/strtest/: strtest.c  strtest.h
c/structtest/: structtest.c  structtest.h
c/unicodetest/: unicode.c
c/uniontest/: uniontest.c  uniontest.h
design/: go.mod
design/01_create/01_singleton/: singleton.go  singleton_test.go
design/01_create/02_factory/: example_test.go
design/01_create/03_abstractfactory/: example_test.go  factory.go
design/01_create/04_generator/: generator.go  generator_test.go
design/01_create/05_pool/: pool.go
design/01_create/06_prototype/: prototype.go
design/01_create/07_builder/: builder.go  example_test.go  (+1 more)
fyne/: go.mod  main.go  run.sh
fyne/bind/: test.go
fyne/container/: custom.go  test.go
fyne/simple/: test.go
fyne/theme/: custom.go
fyne/widget/: custom.go  extends.go  test.go
python/: .gitignore
python/jupyter/: abs.py  abs_test.py  base.ipynb  decorator.ipynb  error.ipynb  func.ipynb  module.ipynb  obj.ipynb  range.ipynb  readme  slice.ipynb  test.ipynb
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/tests/: enum.rs  error.rs  generics.rs  lifetime.rs  owner.rs  string.rs  struct.rs  test.rs  trait.rs  type.rs  vector.rs
(+42 files in other folders)
